src/stylesheets/components/photo/_grid.scss
//
// Photo grid
// --------------------------------------------------

.photo-grid {
  flex: 1 1 0;
  margin-bottom: $space-min;
  display: flex;
  flex-direction: column;

  &.over-file {
    @extend %drop-target;
  }

  .over & {
    overflow: hidden;
  }

  .scroll-container {
    padding: $space-min $default-padding-horizontal 0;
  }

  .runway {
    contain: layout style size;
  }

  .viewport {
    display: grid;
    contain: layout style;
    will-change: transform;
  }

  .photo {
    position: relative;
  }
}

